# CalmNiceFramework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lcc.bat  worklog.txt
build_tool/: build_script.py  setup.py
include/CNF/: dx12_renderer.h  renderer.h
src/: dx12_renderer.cpp  renderer.cpp
tests/: renderer_tests.cpp  simpleMain.cpp
